fix product details alignment

--- a/index.css
+++ b/index.css
@@ -50,7 +50,7 @@
 
 .product-container {
   display: flex;
-  flex-direction: row;
+  justify-content: center;
   align-items: center;
   gap: 30px;
 }
@@ -61,6 +61,7 @@
 
 .product-details {
   width: 100%;
+  margin-left: 30px;
   display: flex;
   flex-direction: column;
   gap: 20px;
